# echo

./: .dockerignore  .env.example  .gitignore  .pnpmrc  AGENT.md  CLAUDE.md  LICENSE  Makefile  README.md  biome.json  biome2.json  bunfig.toml  buster.code-workspace  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  slack-oauth-integration-prd.md  tag_info.json  tsconfig.json  turbo.json  version.txt  vitest.config.ts
api/: .cursorrules  .dockerignore  .gitignore  .windsurfrules  CLAUDE-LIBRARY-INDEX.md  CLAUDE.md  Cargo.toml  Dockerfile  handler-rules.mdc  makefile
api/.claude/commands/: implement_prd.md  testing_plan_units copy.md
api/.cursor/rules/: global.mdc  handlers.mdc  libs.mdc  prds.mdc  rest-formatting-rules.mdc  rest-rules.mdc  rest.mdc  testing.mdc  websockets.mdc
api/documentation/: database_migrations.mdc  handlers.mdc  libs.mdc  prds.mdc  testing.mdc
api/libs/agents/: Cargo.toml
api/libs/braintrust/: CLAUDE.md  Cargo.toml  README.md
api/libs/database/: Cargo.toml  lib.rs  seed.sql  setup.sql
api/libs/dataset_security/: Cargo.toml
api/libs/email/: Cargo.toml
api/libs/handlers/: CLAUDE.md  Cargo.toml
api/libs/litellm/: CLAUDE.md  Cargo.toml
api/libs/middleware/: Cargo.toml
api/libs/query_engine/: CLAUDE.md  Cargo.toml
api/libs/rerank/: Cargo.toml
api/libs/search/: Cargo.toml
api/libs/semantic_layer/: Cargo.toml  spec.yml
api/libs/sharing/: Cargo.toml
api/libs/sql_analyzer/: CLAUDE.md  Cargo.toml
api/libs/stored_values/: Cargo.toml
api/libs/streaming/: Cargo.toml
api/migrations/2025-01-17-182615_user_info_cache/: up.sql
api/migrations/2025-01-27-235752_metric_files/: down.sql  up.sql
api/migrations/2025-01-27-235858_dashboard_files/: down.sql  up.sql
api/migrations/2025-01-27-390057_adjust_threads_table/: down.sql  up.sql
api/migrations/2025-01-28-164827_file_junction_table/: up.sql
api/migrations/2025-01-28-174921_adjust_messages_table/: down.sql  up.sql
api/migrations/2025-01-28-190057_adjust_threads_table/: down.sql
api/migrations/2025-01-29-164827_file_junction_table/: down.sql  up.sql
api/migrations/2025-02-28-194100_modify_secrets_to_match_data_source_identifier/: down.sql  up.sql
api/migrations/2025-03-05-201142_add_user_avatar_url/: down.sql  up.sql
api/migrations/2025-03-06-232923_add_new_enums_to_sharing_and_modify_asset_tables/: down.sql  up.sql
api/migrations/2025-03-20-161346_metric_files_to_dashboard_files/: down.sql
api/migrations/2025-03-25-200823_add_triggers_for_assets_to_search/: down.sql  up.sql
api/migrations/2025-04-01-184914_add_file_info_to_chats/: up.sql
api/migrations/2025-04-02-030531_add_is_duplicate_to_messages_to_files/: down.sql  up.sql
api/migrations/2025-04-02-225201_add_data_metadata_to_metric_files/: down.sql  up.sql
api/migrations/2025-04-07-145234_add_version_to_messages_to_files_table/: up.sql
api/migrations/2025-04-07-222456_add_public_password_to_files/: down.sql  up.sql
api/migrations/2025-04-08-213658_add_most_recent_version_number_to_chats/: down.sql  up.sql
api/migrations/2025-04-22-151030_add_cascade_update_to_user_fks/: up.sql
api/migrations/2025-04-23-133127_migrate_secrets_to_vault_functions/: down.sql  up.sql
api/migrations/2025-04-29-223656_add_data_source_id_to_metric_files/: down.sql  up.sql
api/migrations/2025-04-29-223855_create_metric_files_to_datasets_join_table/: up.sql
api/prds/: prd_api_model_persistence.md  prd_api_request_handling.md  prd_api_type_inference.md  prd_cli_config_and_discovery.md  prd_cli_deployment_logic.md  prd_semantic_model_definition.md  project_template.md  semantic_layer_refactor_overview.md  sub_prd_template.md  template.md
api/prds/active/: api_add_assets_to_collection.md  api_add_assets_to_get_collection.md  api_add_dashboards_to_collection.md  api_add_metrics_to_collection.md  api_asset_permission_admin_check.md  api_auth_user_enhancement.md  api_bulk_metric_status_update.md  api_chat_handlers_refactor.md  api_chat_permission_checks.md  api_chats_sharing_create.md  api_chats_sharing_delete.md  api_chats_sharing_list.md  api_chats_sharing_summary.md  api_chats_sharing_update.md  api_collection_permission_checks.md  api_collections_handlers_refactor.md  api_collections_rest_endpoints.md  api_collections_sharing_create.md  api_collections_sharing_delete.md  api_collections_sharing_list.md  api_collections_sharing_summary.md  api_collections_sharing_update.md  api_collections_update.md  api_cross_asset_operations.md  api_dashboard_create_endpoint.md  api_dashboard_delete_endpoint.md  api_dashboard_permission_checks.md  api_dashboard_project_plan.md  api_dashboard_rest_endpoints.md  api_dashboard_update_endpoint.md  api_dashboards_handlers_refactor.md  api_dashboards_sharing_create.md  api_dashboards_sharing_delete.md  api_dashboards_sharing_list.md  api_dashboards_sharing_summary.md  api_dashboards_sharing_update.md  api_data_source_handlers_refactor.md  api_data_sources_endpoints_implementation.md  api_duplicate_chat.md  api_favorites_handlers_refactor.md  (+61 more)
api/server/: Cargo.toml  README.md
api/server/src/: main.rs
api/server/tests/: mod.rs
api/src/: main.rs
api/src/buster_middleware/: auth.rs
api/src/database/: enums.rs  models.rs  schema.rs
api/src/database_dep/: enums.rs  models.rs
api/src/routes/: mod.rs
api/src/utils/: mod.rs
api/testkit/: .env.test  CLAUDE.md  Cargo.toml  README.md  build.rs
api/testkit/src/: lib.rs
api/tests/: example_test.rs
api/tests/common/: db.rs  env.rs  helpers.rs  mod.rs
api/tests/integration/: mod.rs
apps/api/: .gitignore  .windsurfrules  CLAUDE.md  Cargo.toml  Dockerfile  README.md  diesel.toml  knowledge.md  makefile  package.json  test_search_enum.rs  turbo.json
apps/api/documentation/: database_migrations.mdc  libs.mdc  testing.mdc  websockets.mdc
apps/api/libs/: CLAUDE-TEMPLATE.md  CLAUDE.md
apps/api/prds/: template.md  (+4 more)
cli/: .gitignore  Cargo.toml  Makefile  README.md
cli/cli/: Cargo.toml  docker-compose.yml
cli/src/: main.rs
cli/tests/: env_vars_test.rs
(+32870 files in other folders)
