[workspace]
members = [
    "cli",
    "libs/dbt_utils",
    # Add "libs/*" or specific lib crates here later
]

[workspace.dependencies]
anyhow = "1.0.79"
async-trait = "0.1.80"
clap = { version = "4.4.18", features = ["derive", "env"] }
confy = "0.6.0"
dirs = "6.0.0"
futures = "0.3.29"
indicatif = "0.17.8"
inquire = "0.7.5"
lazy_static = "1.4.0"
ratatui = "0.29.0"
regex = "1.10.3"
reqwest = { version = "0.12.9", features = ["json", "rustls-tls", "stream"] }
rpassword = "7.3.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_yaml = "0.9.34"
tempfile = "3.10.0"
thiserror = "2.0.3"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["io"] }
futures-util = "0.3.30"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
colored = "3.0"
rustls = { version = "0.23", features = ["tls12"] }
url = "2.5.0"
zip = "2.2.2"
glob = "0.3.1"
walkdir = "2.5.0"
# The query_engine dependency needs a workspace-relative path
query_engine = { path = "../api/libs/query_engine" } # Adjusted path
chrono = "0.4" # Specify the version here
semver = "1.0.19"
crossterm = "0.29" # Add crossterm explicitly
rustyline = "15.0.0"
once_cell = "1.19.0"
pathdiff = "0.2.1"
rust-embed = { version = "8.7.1", features = ["include-exclude"] }

# Keep dev-dependencies separate if they aren't shared
# tempfile = "3.16.0" 