[package]
name = "buster_server"
version = "0.0.1"
edition = "2021"
default-run = "buster_server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Use workspace dependencies
anyhow = { workspace = true }
arrow = { workspace = true }
async-compression = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
bb8-redis = { workspace = true }
chrono = { workspace = true }
cohere-rust = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
diesel_migrations = { workspace = true }
dotenv = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
gcp-bigquery-client = { workspace = true }
html-escape = { workspace = true }
indexmap = { workspace = true }
jsonwebtoken = { workspace = true }
lazy_static = { workspace = true }
num-traits = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
redis = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
resend-rs = { workspace = true }
rustls = { workspace = true }
rustls-native-certs = { workspace = true }
sentry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
serde_yaml = { workspace = true }
snowflake-api = { workspace = true }
sqlx = { workspace = true }
tempfile = { workspace = true }
tiberius = { workspace = true }
tiktoken-rs = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tokio-postgres-rustls = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
sqlparser = { workspace = true }

# Local dependencies
handlers = { path = "../libs/handlers" }
litellm = { path = "../libs/litellm" }
database = { path = "../libs/database" }
agents = { path = "../libs/agents" }
query_engine = { path = "../libs/query_engine" }
braintrust = { path = "../libs/braintrust" }
middleware = { path = "../libs/middleware" }
sharing = { path = "../libs/sharing" }
search = { path = "../libs/search" }

[dev-dependencies]
mockito = { workspace = true }
tokio-test = { workspace = true }
async-trait = { workspace = true } 