[package]
name = "testkit"
version = "0.1.0"
edition = "2021"
description = "Test utilities for Buster API database pools"
build = "build.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
sqlx = { workspace = true }
bb8-redis = { workspace = true }
uuid = { workspace = true }
dotenv = { workspace = true }
once_cell = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
database = { path = "../libs/database" }

[build-dependencies]
dotenv = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
database = { path = "../libs/database" }

[features]
default = []
db_reset = [] # Use with caution - allows resetting the test database 