[package]
name = "agents"
version = "0.1.0"
edition = "2021"

# Inherit workspace dependencies
[dependencies]
# Use workspace dependencies
anyhow = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
litellm = { path = "../litellm" }
serde_json = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }

# Development dependencies
[dev-dependencies]
tokio-test = { workspace = true }
mockito = { workspace = true }
dotenv = { workspace = true }

[features]
default = []
