[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
anyhow = { workspace = true }
chrono = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# Additional dependencies
async-trait = "0.1"
bb8-redis = "0.18.0"
futures = "0.3"
indexmap = { version = "2.2", features = ["serde"] }
once_cell = "1.20"
rustls = "0.23"
rustls-native-certs = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }
tokio-postgres = "0.7"
tokio-postgres-rustls = "0.13" 