[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
anyhow = { workspace = true }
chrono = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
indexmap = { workspace = true }
once_cell = { workspace = true }
rustls = { workspace = true }
rustls-native-certs = { workspace = true }
sqlx = { workspace = true }
tokio-postgres = { workspace = true }
tokio-postgres-rustls = { workspace = true }
bb8-redis = { workspace = true }
serde_yaml = { workspace = true }


[dev-dependencies]
tokio-test = { workspace = true } 