[package]
name = "handlers"
version = "0.1.0"
edition = "2021"

[dependencies]
# Use workspace dependencies
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
futures = { workspace = true }

# Local dependencies
database = { path = "../database" }

# Add any handler-specific dependencies here 

[dev-dependencies]
tokio-test = { workspace = true } 