[package]
name = "litellm"
version = "0.1.0"
edition = "2021"

[dependencies]
# Use workspace dependencies
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# Library specific dependencies
reqwest = { version = "0.12.4", features = ["json", "stream"] }
async-trait = "0.1.85"
futures = "0.3.30"
futures-util = "0.3"
dotenv = "0.15.0"

[dev-dependencies]
mockito = "1.2.0"
tokio = { version = "1.38.0", features = ["full", "test-util"] } 