[package]
name = "litellm"
version = "0.1.0"
edition = "2021"

[dependencies]
# Use workspace dependencies
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
dotenv = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
mockito = { workspace = true }
tokio-test = { workspace = true } 