[package]
name = "middleware"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies from workspace
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
lazy_static = { workspace = true }

# Auth-specific dependencies
jsonwebtoken = { workspace = true }
serde_urlencoded = { workspace = true }

# Web framework dependencies
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
futures = { workspace = true }

# Sentry dependencies
sentry = { workspace = true }
sentry-tower = { workspace = true }
sentry-tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Internal workspace dependencies
database = { path = "../database" }

[dev-dependencies]
tokio-test = { workspace = true }

[features]
default = [] 