[package]
name = "rerank"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenv = { workspace = true }
fastembed = "4.8.0"

[dev-dependencies]
dotenv = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
