[package]
name = "sql_analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlparser = { workspace = true }  # For SQL parsing
tokio = { workspace = true }      # For async operations
anyhow = { workspace = true }     # For error handling
serde = { workspace = true }      # For serialization
serde_json = { workspace = true } # For JSON output
tracing = { workspace = true }    # For logging
thiserror = { workspace = true }  # For custom errors

[dev-dependencies]
tokio-test = { workspace = true } # For async testing

[features]
default = []