[package]
name = "litellm"
version = "0.1.0"
edition = "2021"

[dependencies]
# Use workspace dependencies
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
reqwest = { workspace = true }
dotenv = { workspace = true }
once_cell = "1.19.0"
tracing = "0.1"

[dev-dependencies]
mockito = { workspace = true }
tokio-test = { workspace = true } 