[package]
name = "query_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
indexmap = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
database = { path = "../database" }
chrono = { workspace = true }
arrow = { workspace = true }
sqlx = { workspace = true }
gcp-bigquery-client = { workspace = true }
tempfile = { workspace = true }
url = { workspace = true }
snowflake-api = { workspace = true }
tiberius = { workspace = true }
tokio-util = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
sqlparser = { workspace = true }
num-traits = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }

[features]
default = [] 